Fixed issue with portrait background picture on the home page not showing well on larger screens. increased height of background image for wider screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -301,6 +301,12 @@ div.col-12 {
     -o-background-size: cover;
 }
 
+@media (min-width: 992px) { 
+    .portraits-bg {
+        height: 80vh;
+    }
+}
+
 .bands-gigs-title,
 .album-artwork-title,
 .portraits-title {
